syntax = "proto3";
option java_multiple_files = true;

package com.paozero.game.protobuf;

message LoginRequest{
  string openId = 1;
}

message LoginResponse{
  int64 userId = 1;
}